<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="24dp"
        android:onClick="ir"
        android:text="@string/ir"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genero" />

    <RadioGroup
        android:id="@+id/grupo"
        android:layout_width="245dp"
        android:layout_height="86dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ir">

        <RadioButton
            android:id="@+id/opcion1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/opcion1" />

        <RadioButton
            android:id="@+id/opcion2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/opcion2" />
    </RadioGroup>

    <EditText
        android:id="@+id/personaje"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/personaje"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombre" />

    <EditText
        android:id="@+id/genero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/genero"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/personaje" />

    <Button
        android:id="@+id/otro"
        android:layout_width="130dp"
        android:layout_height="46dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:onClick="otro"
        android:text="@string/otro"
        app:layout_constraintStart_toEndOf="@+id/ir"
        app:layout_constraintTop_toBottomOf="@+id/genero" />

    <Button
        android:id="@+id/verificar"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="212dp"
        android:layout_marginTop="24dp"
        android:onClick="seleccionar"
        android:text="@string/Verificar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/grupo" />

    <Button
        android:id="@+id/button5"
        android:layout_width="94dp"
        android:layout_height="49dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="24dp"
        android:onClick="cerrar"
        android:text="@string/cerrar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/grupo" />

</android.support.constraint.ConstraintLayout>