<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".infoKingdom">

    <Button
        android:id="@+id/cerrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="444dp"
        android:onClick="cerrar"
        android:text="@string/cerrar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Titulo"
        android:layout_width="61dp"
        android:layout_height="21dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="32dp"
        android:text="@string/titulo"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/informacion"
        android:layout_width="115dp"
        android:layout_height="27dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="40dp"
        android:text="@string/informacion"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Titulo" />

    <TextView
        android:id="@+id/Personajes"
        android:layout_width="83dp"
        android:layout_height="27dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="144dp"
        android:text="@string/Personajes"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/informacion" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="73dp"
        android:layout_height="29dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="28dp"
        android:text="@string/generos"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Personajes" />

    <TextView
        android:id="@+id/King"
        android:layout_width="149dp"
        android:layout_height="21dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:text="@string/titulo_nomb"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintStart_toEndOf="@+id/Titulo"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/King_info"
        android:layout_width="200dp"
        android:layout_height="118dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="76dp"
        android:text="@string/inf_videos"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/King" />

    <TextView
        android:id="@+id/King_p"
        android:layout_width="164dp"
        android:layout_height="37dp"
        android:layout_marginStart="196dp"
        android:layout_marginTop="20dp"
        android:text="@string/inf_personajes"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/King_info" />

    <TextView
        android:id="@+id/King_g"
        android:layout_width="171dp"
        android:layout_height="32dp"
        android:layout_marginStart="188dp"
        android:layout_marginTop="12dp"
        android:text="@string/inf_genero"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/King_p" />

    <LinearLayout
        android:layout_width="216dp"
        android:layout_height="132dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="360dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/kiingdomsss" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="wrap_content"
            android:layout_height="122dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/king" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>