<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".info_TomRaider">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="444dp"
        android:onClick="cerrar"
        android:text="@string/cerrar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="76dp"
        android:layout_height="28dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="16dp"
        android:text="@string/titulo"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="108dp"
        android:layout_height="31dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="40dp"
        android:text="@string/informacion"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="87dp"
        android:layout_height="30dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="152dp"
        android:text="@string/Personajes"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="82dp"
        android:layout_height="27dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="32dp"
        android:text="@string/generos"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/Tomb"
        android:layout_width="161dp"
        android:layout_height="29dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:text="@string/titulo_nomb"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Tomb_info"
        android:layout_width="210dp"
        android:layout_height="122dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="128dp"
        android:text="@string/inf_videos"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Tomb_p"
        android:layout_width="151dp"
        android:layout_height="33dp"
        android:layout_marginStart="192dp"
        android:layout_marginTop="220dp"
        android:text="@string/inf_personajes"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Tomb" />

    <TextView
        android:id="@+id/Tomb_g"
        android:layout_width="158dp"
        android:layout_height="31dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:text="@string/inf_genero"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintStart_toEndOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/Tomb_p" />

    <LinearLayout
        android:layout_width="254dp"
        android:layout_height="125dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="368dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/tomb" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/tombps4" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>