<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".info_asasincreed">

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="444dp"
        android:onClick="cerrar"
        android:text="@string/cerrar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="32dp"
        android:text="@string/titulo"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="98dp"
        android:layout_height="35dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="44dp"
        android:text="@string/informacion"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="79dp"
        android:layout_height="30dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="152dp"
        android:text="@string/Personajes"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="91dp"
        android:layout_height="29dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="28dp"
        android:text="@string/generos"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/Asasin"
        android:layout_width="143dp"
        android:layout_height="23dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:text="@string/titulo_nomb"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Asasin_info"
        android:layout_width="174dp"
        android:layout_height="111dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="92dp"
        android:text="@string/inf_videos"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Asasin" />

    <TextView
        android:id="@+id/Asasin_p"
        android:layout_width="173dp"
        android:layout_height="36dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/inf_personajes"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintStart_toEndOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/Asasin_info" />

    <TextView
        android:id="@+id/Asasin_g"
        android:layout_width="167dp"
        android:layout_height="30dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="20dp"
        android:text="@string/inf_genero"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintStart_toEndOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/Asasin_p" />

    <LinearLayout
        android:layout_width="227dp"
        android:layout_height="106dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="380dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="4dp"
            android:layout_height="104dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/asasins" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="100dp"
            android:layout_height="90dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/asasinscreed" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>