<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".info_supermario">

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="444dp"
        android:onClick="cerrar"
        android:text="@string/cerrar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="79dp"
        android:layout_height="27dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="28dp"
        android:text="@string/titulo"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="115dp"
        android:layout_height="30dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="28dp"
        android:text="@string/informacion"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="92dp"
        android:layout_height="33dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="128dp"
        android:text="@string/Personajes"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="77dp"
        android:layout_height="28dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="44dp"
        android:text="@string/generos"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/Mario"
        android:layout_width="154dp"
        android:layout_height="22dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/titulo_nomb"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Mario_info"
        android:layout_width="207dp"
        android:layout_height="106dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="64dp"
        android:text="@string/inf_videos"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Mario" />

    <TextView
        android:id="@+id/Mario_p"
        android:layout_width="132dp"
        android:layout_height="32dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="20dp"
        android:text="@string/inf_personajes"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/Mario_info" />

    <TextView
        android:id="@+id/Mario_g"
        android:layout_width="142dp"
        android:layout_height="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:text="@string/inf_genero"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/Mario_p" />

    <LinearLayout
        android:layout_width="225dp"
        android:layout_height="138dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="356dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/mario" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/supermario64" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>